--- a/css/infrastructure.css
+++ b/css/infrastructure.css
@@ -417,63 +417,6 @@
   color: #787A80;
 }
 
-.our__title {
-  margin: 0;
-  padding-bottom: 24px;
-  font-size: 46px;
-  font-weight: 700;
-  line-height: 59.8px;
-  text-align: center;
-}
-
-.our__text {
-  margin: 0;
-  color: #787A80;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 27px;
-  text-align: center;
-}
-
-.our__cards {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 94px;
-}
-.our__cards hr {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(218, 219, 221, 0)), color-stop(12.33%, rgba(218, 219, 221, 0.5)), color-stop(51.91%, #DADBDD), color-stop(87.85%, rgba(218, 219, 221, 0.5)), to(rgba(218, 219, 221, 0)));
-  background: linear-gradient(to bottom, rgba(218, 219, 221, 0) 0%, rgba(218, 219, 221, 0.5) 12.33%, #DADBDD 51.91%, rgba(218, 219, 221, 0.5) 87.85%, rgba(218, 219, 221, 0) 100%);
-  width: 3px;
-  border-style: none;
-}
-.our__item {
-  width: 33.3%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-.our__subtitle {
-  margin: 0;
-  padding-top: 24px;
-  font-size: 20px;
-  font-weight: 700;
-  line-height: 30px;
-}
-.our__subtext {
-  margin: 0;
-  text-align: center;
-  padding-top: 8px;
-  color: #787A80;
-}
-
 .orange__button-40,
 .orange__button-112,
 .white__button-40,
@@ -556,175 +499,65 @@ body {
   margin: 0 auto;
 }
 
-.header {
-  background-color: rgb(244, 245, 246);
-}
-
 .description__section {
-  background-image: url(/img/positions/image.png);
   background-repeat: no-repeat;
   background-position: 100%;
 }
 .description__area {
-  padding: 80px 0 145px 0;
-  width: 600px;
+  padding: 80px 0 160px 0;
 }
-
-.vacancy__positions {
-  padding: 120px 0 180px 0;
+.description__box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  width: auto;
+  padding-bottom: 0;
+  padding-top: 48px;
 }
-.vacancy__box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  gap: 24px;
-}
-.vacancy__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 600px;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  border: 1px solid rgb(229, 232, 237);
-  border-radius: 4px;
-  padding: 32px 40px;
-}
-.vacancy__item button {
-  margin: 8px 0;
-}
-.vacancy__item:hover {
-  -webkit-box-shadow: 0 0 20px rgba(30, 33, 44, 0.2);
-          box-shadow: 0 0 20px rgba(30, 33, 44, 0.2);
-  -webkit-transform: scale(1.03);
-          transform: scale(1.03);
-  -webkit-transition: all 0.1s ease-in;
-  transition: all 0.1s ease-in;
-}
-.vacancy__sub {
-  width: 390px;
-}
-.vacancy__title {
-  margin: 0;
-  font-size: 28px;
+.description__title {
+  font-size: 64px;
   font-weight: 700;
-  line-height: 42px;
-  padding-bottom: 24px;
+  line-height: 76.8px;
+  padding-bottom: 0;
 }
-.vacancy__text {
-  margin: 0;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 27px;
-  color: rgb(66, 69, 81);
-  padding-bottom: 48px;
-}
-.vacancy__area {
+.description__news {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  width: 500px;
+}
+.description__news hr {
+  margin: 4.5px 12px;
+  border: 0.5px solid #787A80;
+}
+.description__news .orange {
+  color: rgb(255, 90, 48);
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 25.6px;
+  padding-left: 0;
+}
+.description__socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 12px;
 }
 
-.item__info {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding-bottom: 8px;
-}
-.item__info hr {
-  margin: 4.5px 12px;
-  border: 0.5px solid rgb(120, 122, 128);
-}
 .item__text {
   margin: 0;
   color: rgb(120, 122, 128);
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 21px;
   padding-left: 8px;
 }
-.item__title {
-  margin: 0;
-  font-size: 20px;
-  font-weight: 700;
-  line-height: 30px;
-}
 
-.our__values {
-  padding-bottom: 180px;
-}
-.our__box {
-  padding-bottom: 60px;
-}
-
-.modal__bg {
-  display: none;
-  position: fixed;
-  background-color: rgba(127, 127, 127, 0.7);
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-.modal__window {
-  position: relative;
-  width: 390px;
-  background-color: #fff;
-  padding: 48px;
-  border-radius: 4px;
-  border: 1px solid rgb(229, 232, 237);
-}
-.modal__window .crosshair {
-  cursor: pointer;
-  position: absolute;
-  top: 24px;
-  right: 24px;
-}
-.modal__window .upload__form {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-.modal__window .upload__form input[type=file] {
-  display: none;
-}
-.modal__window .upload__form label {
-  padding-top: 24px;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 21px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  gap: 12px;
-}
-.modal__window .upload__form label img {
-  cursor: pointer;
-}
-.modal__window .modal__form {
+.news__wrapper {
+  width: 810px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -732,9 +565,152 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  gap: 20px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0 auto;
 }
-.modal__window .modal__form .form__box {
+
+.news__section .news__shift {
+  display: block;
+  position: relative;
+  top: -80px;
+}
+.news__box h3 {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 30px;
+  margin: 0;
+  padding-bottom: 24px;
+}
+.news__text {
+  margin: 0;
+}
+.news__quote {
+  padding: 48px 0;
+  list-style-image: url(/img/infrastructure/braces.png);
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 30px;
+  margin: 0;
+  -webkit-padding-start: 38px;
+          padding-inline-start: 38px;
+}
+.news__list {
+  padding: 24px 0;
+  list-style-image: url(/img/infrastructure/check.svg);
+  margin: 0;
+  -webkit-padding-start: 24px;
+          padding-inline-start: 24px;
+}
+.news__share {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 12px;
+}
+.news__share h6 {
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 25.6px;
+  margin: 0;
+}
+.news__comments {
+  padding-bottom: 120px;
+}
+.news__comments h2 {
+  font-size: 46px;
+  font-weight: 700;
+  line-height: 60px;
+  margin: 0;
+  text-align: center;
+  padding-top: 80px;
+  padding-bottom: 60px;
+}
+.news__your-comment {
+  padding-bottom: 180px;
+}
+.news__your-comment h2 {
+  font-size: 46px;
+  font-weight: 700;
+  line-height: 60px;
+  padding-bottom: 48px;
+  text-align: center;
+  margin: 0;
+}
+.news__form {
+  padding-bottom: 48px;
+}
+
+.comments__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 60px;
+}
+.comments__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 30px;
+}
+.comments__info {
+  margin: 0;
+}
+.comments__name {
+  margin: 0;
+  width: 150px;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 27px;
+}
+.comments__date {
+  margin: 0;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  color: rgb(120, 122, 128);
+}
+.comments__comment {
+  color: rgb(66, 69, 81);
+}
+.comments__text {
+  margin: 0;
+}
+.comments__text span {
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 25.6px;
+  color: #FF5A30;
+}
+.comments__reply {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-top: 16px;
+  gap: 8px;
+}
+.comments__reply p {
+  margin: 0;
+  color: rgb(120, 122, 128);
+}
+
+.form__divisor {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 30px;
+  padding-bottom: 22px;
+}
+.form__divisor input[type=text], .form__divisor input[type=email] {
+  width: 372px;
+  padding-left: 16px;
+}
+.form__item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -744,56 +720,33 @@ body {
           flex-direction: column;
   gap: 8px;
 }
-.modal__window .modal__form .form__box label {
-  font-size: 14px;
+.form__item input, .form__item textarea {
+  font-size: 16px;
   font-weight: 400;
-  line-height: 21px;
-}
-.modal__window .modal__form .form__box input, .modal__window .modal__form .form__box textarea, .modal__window .modal__form .form__box select {
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 21px;
+  line-height: 25.6px;
   font-family: Ubuntu, sans-serif;
+  color: rgb(154, 156, 165);
+  padding: 13px 0 13px 16px !important;
+  max-width: 792px;
 }
-.modal__window .modal__form .form__box textarea, .modal__window .modal__form .form__box input[type=text], .modal__window .modal__form .form__box input[type=tel], .modal__window .modal__form .form__box input[type=email], .modal__window .modal__form .form__box select {
+.form__item label {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 25.6px;
+  color: rgb(66, 69, 81);
+}
+.form__item input[type=text], .form__item input[type=email], .form__item textarea {
   background-color: #F4F5F6;
   border: 1px solid #D7DADD;
   border-radius: 4px;
-  padding: 11px 16px;
-}
-.modal__window .modal__form .form__box textarea {
-  max-width: 357px;
-}
-.modal__title {
-  margin: 0;
-  padding-bottom: 24px;
-  font-size: 28px;
-  font-weight: 700;
-  line-height: 42px;
-  text-align: center;
+  padding: 11px;
 }
 
-.orange__button {
-  font-family: Ubuntu, sans-serif;
-  margin-top: 40px;
-  width: 390px;
-  border-radius: 4px;
-  border: 1px solid #FF5A30;
-  color: #FFFFFF;
-  background-color: #FF5A30;
-  font-size: 14px;
-  font-weight: 700;
-  line-height: 42px;
-  padding: 0 32px;
-}
-.orange__button:hover {
-  cursor: pointer;
-  color: #FF5A30;
-  background-color: #FFFFFF;
-  -webkit-transition: all 0.2s ease-in;
-  transition: all 0.2s ease-in;
-}
-
-.orange__button-40, .white__button-40 {
-  width: 180px;
+.post__button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
