--- a/#source/scss/positions.scss
+++ b/#source/scss/positions.scss
@@ -79,7 +79,7 @@ body{
 }
   &__area{
     display: flex;
-    gap: 30px;
+    justify-content: space-between;
 }
 }
 .item {
@@ -205,4 +205,7 @@ body{
         transition: all 0.2s ease-in;
     }
   }
+}
+.orange__button-40, .white__button-40{
+  width: 180px;
 }
