--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -28,11 +28,19 @@ body{
     padding: 0 40px;
     border-radius: 4px;
     border: 1px solid #FF5A30;
+    a{
+        text-decoration: none;
+        color: #FFFFFF;
+    }
     &:hover{
-        cursor: pointer;
         color: #FF5A30;
+        cursor: pointer;
         background-color: #FFFFFF;
         transition: all 0.2s ease-in;
+        a{
+            color: #FF5A30;
+            transition: all 0.2s ease-in;
+        }
     }
 }
 
@@ -73,9 +81,17 @@ body{
                 border: 1px solid #FFFFFF;
                 padding: 0 40px;
                 border-radius: 4px;
+                a{
+                    text-decoration: none;
+                    color: #FFFFFF;
+                }
                 &:hover{
-                    cursor: pointer;
                     color: #787A80;
+                    cursor: pointer;
+                    a{
+                        color: #787A80;
+                        transition: all 0.2s ease-in;
+                    }
                     background-color: #FFFFFF;
                     transition: all 0.2s ease-in;
                 }
